init stats page

--- a/backend/templates/stats.html
+++ b/backend/templates/stats.html
@@ -7,7 +7,11 @@
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+<title>Experimenting with Google App Engine - Bret Taylor's blog</title>
+<link rel="stylesheet" href="/static/blog.css" type="text/css"/>
+<link rel="alternate" href="#" type="application/atom+xml" title="Bret Taylor's blog"/>
+<head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <title>
       Google Visualization API Sample
@@ -55,9 +59,42 @@
 
       google.setOnLoadCallback(drawVisualization);
     </script>
-  </head>
-  <body style="font-family: Arial;border: 0 none;">
-    <div id="visualization" style="width: 300px; height: 300px;"></div>
-  </body>
+</head>
+
+<body>
+<div id="body">
+<div id="header">
+</div>
+<div id="content">
+
+	<div id="sidebar">
+		<div class="section">
+			<div class="headline"><img src="/static/images/find-me-on-the-web.png" style="width:139px" alt="Stats in last 5 days"/></div>
+			<table class="icons">
+				<tr>
+				</tr>
+			</table>
+			<div class="headline"><img src="/static/images/find-me-on-the-web.png" style="width:139px" alt="Stats in last 5 weeks"/></div>
+			<table class="icons">
+				<tr>
+				</tr>
+			</table>
+		</div>
+	</div>
+
+	<div id="entries">
+		<div class="entry">
+			<h1><a href="#"></a></h1>
+			<div class="body">
+    				<div id="visualization" style="width: 300px; height: 300px;"></div>
+			
+			</div>
+		</div>
+	</div>
+</div>
+<!-- closing body div -->
+</div>
+
+</body>
 </html>
 
