--- a/backend/templates/stats.html
+++ b/backend/templates/stats.html
@@ -23,23 +23,33 @@
     <script type="text/javascript">
       function drawVisualization(type, statsForDate) {
         var options = {};
-		if (statsForDate){
-			alert(statsForDate);
-		} else {
-			today = new Date()
-			alert(today);
-			statsForDate = '2010-01-12' 
+		if (!statsForDate){
+			today = new Date();
+			day = today.getDate();
+			day--;
+			day = day + "";
+			if ( day.length == 1 ) {
+				day = "0" + day;
+			}
+			month = today.getMonth();
+			month++;
+			month = month + "";
+			if (month.length == 1 ){
+				month = "0" + month;
+			}
+			year = today.getFullYear();
+			statsForDate = year+'-'+month+'-'+day; 
 		}
 		if (type == 1){
-			typeString = 'weeklyfeed'
+			typeString = 'weeklyfeed';
 		}
 		else {
-			typeString = 'dailyfeed'
+			typeString = 'dailyfeed';
 		} 
 		//typeString = 'weeklyfeed'
 		staticurl = 'http://instaright.appspot.com/visual?type='
 		dataurl = staticurl + typeString + '&date=' + statsForDate
-		alert(dataurl)
+		alert(dataurl);
       
         // 'bhg' is a horizontal grouped bar chart in the Google Chart API.
         // The grouping is irrelevant here since there is only one numeric column.
@@ -91,15 +101,21 @@
 			<table class="icons">
 				{% for d in dailyStats %}
 				<tr>
-				<input type="button" onclick="javascript:alert('alert');drawVisualization(0, {{ d }})" value="{{ d }}"/>
+				<script type="text/javascript">
+					var targetDate = "{{ d }}";
+				</script>
+				<input type="button" onclick="drawVisualization(0, targetDate );" value="{{ d }}"/>
 				</tr>
 				{% endfor %}
 			</table>
 			<div class="headline"><img src="/static/images/find-me-on-the-web.png" style="width:139px" alt="Stats in last 5 weeks"/></div>
 			<table class="icons">
 				{% for d in weeklyStats %}
+				<script type="text/javascript">
+					var targetDate = "{{ d }}";
+				</script>
 				<tr>
-				<input type="button" onclick="javascript:alert('alert');drawVisualization(1, {{ d }})" value="{{ d }}"/>
+				<input type="button" onclick="drawVisualization(1, targetDate );" value="{{ d }}"/>
 				</tr>
 				{%endfor%}
 			</table>
