--- a/backend/templates/stats.html
+++ b/backend/templates/stats.html
@@ -12,182 +12,111 @@
 <link rel="stylesheet" href="/static/blog.css" type="text/css"/>
 <link rel="alternate" href="#" type="application/atom+xml" title="Instaright Stats"/>
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-    <title>
-      Google Visualization API Sample
-    </title>
-	<script>
-    	// Handy "macro"
-    	function $(id){
-     	 return document.getElementById(id);
-    	}
-		function clearElement(element){
-			$(element).innerHTML= "";
+<meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+<title>
+Google Visualization API Sample
+</title>
+<script>
+// Handy "macro"
+function $(id){
+	return document.getElementById(id);
+}
+function clearElement(element){
+	$(element).innerHTML= "";
 		}
+function setElementValue(element, value){
+	$(element).innerHTML = value;
+}
 
-    	// Client function that calls a server rpc and provides a callback
-    	function doMatchTargetDomain(type, statsForDate) {
-			$('visualisation').innerHTML = "";
-      		//onSuccess(	drawVisualization(type, statsForDate));
+// Client function that calls a server rpc and provides a callback
+function doMatchTargetDomain(type, statsForDate) {
+	$('visualisation').innerHTML = "";
+	//onSuccess(	drawVisualization(type, statsForDate));
     	}
 
-    	// Callback for after a successful doAdd
-    	function onSuccess(response) {
-      		$('visualization').innerHTML= response;
-    	}
-	</script>
-    <script type="text/javascript" src="http://www.google.com/jsapi"></script>
-    <script type="text/javascript">
-      google.load('visualization', '1', {packages: ['imagechart']});
-    </script>
-    <script type="text/javascript">
-      function drawVisualization() {
-	
-        var options = {};
+// Callback for after a successful doAdd
+function onSuccess(response) {
+	$('visualization').innerHTML= response;
+}
+</script>
+<script type="text/javascript" src="http://www.google.com/jsapi"></script>
+<script type="text/javascript">
+google.load('visualization', '1', {packages: ['imagechart']});
+</script>
+<script type="text/javascript">
+function drawVisualization(type, statsForDate) {
+	var options = {};
 	clearElement('visualization');
-	today = new Date();
-	day = today.getDate();
-	day--;
-	day = day + "";
-	if ( day.length == 1 ) {
-		day = "0" + day;
-	}
-	month = today.getMonth();
-	month++;
-	month = month + "";
-	if (month.length == 1 ){
-		month = "0" + month;
-	}
-	year = today.getFullYear();
-	statsForDate = year+'-'+month+'-'+day; 
-	typeString = 'dailyfeed'
-	staticurl = 'http://instaright.appspot.com/visual?type=';
-	dataurl = staticurl + typeString + '&date=' + statsForDate;
-	alert(dataurl);
-      
-        // 'bhg' is a horizontal grouped bar chart in the Google Chart API.
-        // The grouping is irrelevant here since there is only one numeric column.
-        options.cht = 'bhg'; 
-      
-        // Draw labels in pink.
-        var color = 'ff3399';
-      
-        // Google Chart API needs to know which column to draw the labels on.
-        // Here we have one labels column and one data column.
-        // The Chart API doesn't see the label column.  From its point of view,
-        // the data column is column 0.
-        var index = 0;
-      
-        // -1 tells Google Chart API to draw a label on all bars.
-        var allbars = -1;
-      
-        // 10 pixels font size for the labels.
-        var fontSize = 10;
-       
-        // Priority is not so important here, but Google Chart API requires it.
-        var priority = 0;
-	var chart = new google.visualization.ImageChart($('visualization'));
-		try{
-      
-        options.chm = [color, index, allbars, fontSize, priority].join(',');
-        
-        var query= new google.visualization.Query(dataurl);
-	query.setTimeout(10);
-	query.send(
-           function(response){
-				alert("response data:"+response.getDataTable());
-             chart.draw(response.getDataTable(), options);  
-           });
-		} catch(e){
-			alert(e);
+	clearElement('statsHeader');
+	if (!statsForDate){
+		today = new Date();
+		day = today.getDate();
+		day--;
+		day = day + "";
+		if ( day.length == 1 ) {
+			day = "0" + day;
 		}
-       
-      };
-
-function redraw(type, statsForDate){
-	alert('redraw!');
+		month = today.getMonth();
+		month++;
+		month = month + "";
+		if (month.length == 1 ){
+			month = "0" + month;
+		}
+		year = today.getFullYear();
+		statsForDate = year+'-'+month+'-'+day; 
+	}
 	if (type == 1){
 		typeString = 'weeklyfeed';
+		typeLabel="Week stats for "+statsForDate;
 	}
 	else {
 		typeString = 'dailyfeed';
-	}
+		typeLabel="Daily stats for "+statsForDate;
+	} 
+	//alert(typeLabel);
+	setElementValue('statsHeader',typeLabel);
 	//typeString = 'weeklyfeed'
-	//staticurl = 'http://instaright.appspot.com/visual?type=';
-	staticurl = 'http://localhost:8080/visual?type=';
-	dataurl = staticurl + typeString + '&date=' + statsForDate;
-	clearElement('visualization');
-	alert(dataurl);
-	query = new google.visualization.Query(dataurl);
-	query.setTimeout(10);
+	staticurl = 'http://instaright.appspot.com/visual?type='
+	dataurl = staticurl + typeString + '&date=' + statsForDate
+
+	// 'bhg' is a horizontal grouped bar chart in the Google Chart API.
+	// The grouping is irrelevant here since there is only one numeric column.
+	options.cht = 'bhg'; 
+
+	// Draw labels in pink.
+	var color = 'ff3399';
+
+	// Google Chart API needs to know which column to draw the labels on.
+	// Here we have one labels column and one data column.
+	// The Chart API doesn't see the label column.  From its point of view,
+	// the data column is column 0.
+	var index = 0;
+
+	// -1 tells Google Chart API to draw a label on all bars.
+	var allbars = -1;
+
+	// 10 pixels font size for the labels.
+	var fontSize = 10;
+
+	// Priority is not so important here, but Google Chart API requires it.
+	var priority = 0;
 	try{
-		query.send(
-				function(response){
-				alert("response data:"+response.getDataTable());
-				alert("reasons:"+response.getReasons());
-				chart.draw(response.getDataTable(), option);  
-				});
-	}catch(e){
+
+		options.chm = [color, index, allbars, fontSize, priority].join(',');
+
+        new google.visualization.Query(dataurl).send(
+           function(response){
+				//alert("response dat:"+response.getDataTable());
+             new google.visualization.ImageChart(document.getElementById('visualization')).draw(response.getDataTable(), options);  
+           });
+	} catch(e){
 		alert(e);
 	}
-}; 
-function redraw1(type, statsForDate){
-	clearElement('visualization');
-		var data = new google.visualization.DataTable();
-  data.addColumn('string', 'Name');
-  data.addColumn('number', 'Height');
-  data.addRows(3);
-  data.setCell(0, 0, 'Tong Ning mu');
-  data.setCell(1, 0, 'Huang Ang fa');
-  data.setCell(2, 0, 'Teng nu');
-  data.setCell(0, 1, 174);
-  data.setCell(1, 1, 523);
-  data.setCell(2, 1, 86);
-
-  var options = {};
-
-  // 'bhg' is a horizontal grouped bar chart in the Google Chart API.
-  // The grouping is irrelevant here since there is only one numeric column.
-  options.cht = 'bhg';
-
-  // Add a data range.
-  var min = 0;
-  var max = 700;
-  options.chds = min + ',' + max;
-
-  // Now add data point labels at the end of each bar.
-
-  // Add meters suffix to the labels.
-  var meters = 'N** m';
-
-  // Draw labels in pink.
-  var color = 'ff3399';
-
-  // Google Chart API needs to know which column to draw the labels on.
-  // Here we have one labels column and one data column.
-  // The Chart API doesn't see the label column.  From its point of view,
-  // the data column is column 0.
-  var index = 0;
-
-  // -1 tells Google Chart API to draw a label on all bars.
-  var allbars = -1;
-
-  // 10 pixels font size for the labels.
-  var fontSize = 10;
- 
-  // Priority is not so important here, but Google Chart API requires it.
-  var priority = 0;
-1
-  options.chm = [meters, color, index, allbars, fontSize, priority].join(',');
-
-  // Create and draw the visualization.
-  new google.visualization.ImageChart(document.getElementById('visualization')).
-    draw(data, options);  	  
-	  }
-      
+       
+      }
 
       google.setOnLoadCallback(drawVisualization);
-      //google.load(drawVisualization);
+      google.load(drawVisualization);
     </script>
 </head>
 
@@ -199,14 +128,13 @@ function redraw1(type, statsForDate){
 
 	<div id="sidebar">
 		<div class="section">
-			<div class="headline"><img src="/static/images/find-me-on-the-web.png" style="width:139px" alt="Stats in last 5 days"/></div>
+			<div class="headline"><a href="https://addons.mozilla.org/en-US/firefox/addon/13317/"><img src="http://www.seobook.com/images/install-now.png" style="width:139px" alt="Stats in last 5 days"/></a></div>
 			<div class="headline"><p>Stats in last 5 days</p></div>
 			<table class="icons">
 				{% for d in dailyStats %}
 				<tr>
 				<!--input type="button" onclick="drawVisualization(0, targetDate );" value="{{ d }}"/-->
-				<!--input type="button" onclick="drawVisualization(0, this.value);" value="{{ d }}"/-->
-				<td><a href="#" onclick="redraw(0, this.innerHTML);" >{{ d }}</a></td>
+				<td><a href="#" onclick="drawVisualization(0, this.innerHTML);" >{{ d }}</a></td>
 				</tr>
 				{% endfor %}
 			</table>
@@ -215,7 +143,7 @@ function redraw1(type, statsForDate){
 				{% for d in weeklyStats %}
 				<tr>
 				<!--input type="button" onclick="drawVisualization(1, targetDate );" value="{{ d }}"/-->
-				<td><a href="#" onclick="redraw(1, this.innerHTML);" >{{ d }}</a></td>
+				<td><a href="#" onclick="drawVisualization(1, this.innerHTML);" >{{ d }}</a></td>
 				</tr>
 				{%endfor%}
 			</table>
@@ -226,6 +154,7 @@ function redraw1(type, statsForDate){
 		<div class="entry">
 			<h1><a href="#"></a></h1>
 			<div class="body">
+				<div id="statsHeader" ></div>
     				<div id="visualization" style="width: 300px; height: 300px;"></div>
 			
 			</div>
