changes on stats backend; stats_management

--- a/backend/templates/stats.html
+++ b/backend/templates/stats.html
@@ -76,7 +76,8 @@ function drawVisualization(type, statsForDate) {
 	//alert(typeLabel);
 	setElementValue('statsHeader',typeLabel);
 	//typeString = 'weeklyfeed'
-	staticurl = 'http://instaright.appspot.com/visual?type='
+	//staticurl = 'http://instaright.appspot.com/visual?type='
+	staticurl = '/visual?type='
 	dataurl = staticurl + typeString + '&date=' + statsForDate
 
 	// 'bhg' is a horizontal grouped bar chart in the Google Chart API.
