update of stats css; gql update for > 1000 daily link; memcache keys append order;

--- a/backend/templates/stats.html
+++ b/backend/templates/stats.html
@@ -206,8 +206,10 @@ function drawVisualization(type, statsForDate) {
 		</div>
 	</div>
 </div>
+<div class="footer-container">
 <div style="position: relative; text-align: center; color: rgb(0, 0, 204); font-size: small;">
 <p><a href="mailto:gbabun@gmail.com">contact</a> | <a href="http://twitter.com/bojanbabic">twitter</a> | <a href="http://bojanbabic.blogspot.com">blog</a></p>
+</div>
 </div>
 <!-- closing body div -->
 </div>
