--- a/backend/templates/feed.html
+++ b/backend/templates/feed.html
@@ -1,21 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-
-<title>Link Feed</title>
-<link href="/feed" rel="hub" />
+<id>http://instaright.appspot.com</id>
+<title>Instaright Live Feed</title>
+<link rel="self" href="http://instaright.appspot.com/feed" type="application/atom+xml"/>
+<link rel="hub" href="http://pubsubhubbub.appspot.com/" />
 <updated>{{ dateupdated }}</updated>
 <author>
 	<name>Bojan Babic</name>
 	<email>gbabun@gmail.com</email>
 </author>
-<id>http://instright.appspot.com</id>
+<id>http://instright.appspot.com/</id>
 {% for entry in entries %}
 <entry>
-	<id>{{ entry.key }}</id>
-	<title>Link from {{ entry.domain }} submited by {{ entry.key }}</title>
-	<link>http://instaright.appspot.com/{{ entry.key }}</link>
-	<updated>{{ entry.date }}</updated>
-	<desc>Link from {{ entry.domain }}. More about it can be found visiting link</desc>
+	<id>http://instaright.appspot.com/article/{{ entry.key }}</id>
+	<title>Link from {{ entry.domain }} submited by {{ entry.instaright_account }}</title>
+	<link href="http://instaright.appspot.com/article/{{ entry.key }}" />
+	<updated>{{ entry.date|date:"Y-m-d\TH:i:s\Z" }}</updated>
+	<summary>Link from {{ entry.domain }}. More about it can be found visiting link</summary>
 </entry>
 {% endfor %}
 </feed>
