--- a/backend/templates/feed.html
+++ b/backend/templates/feed.html
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <feed xmlns="http://www.w3.org/2005/Atom">
-<id>http://instaright.appspot.com</id>
+<id>http://instaright.appspot.com/</id>
 <title>Instaright Live Feed</title>
 <link rel="self" href="http://instaright.appspot.com/feed" type="application/atom+xml"/>
 <link rel="hub" href="http://pubsubhubbub.appspot.com/" />
-<updated>{{ dateupdated }}</updated>
+<updated>{{ dateupdated|date:"Y-m-d\TH:i:s\Z" }}</updated>
 <author>
 	<name>Bojan Babic</name>
 	<email>gbabun@gmail.com</email>
 </author>
-<id>http://instright.appspot.com/</id>
 {% for entry in entries %}
 <entry>
 	<id>http://instaright.appspot.com/article/{{ entry.key }}</id>
