--- a/backend/templates/feed.html
+++ b/backend/templates/feed.html
@@ -12,7 +12,7 @@
 {% for entry in entries %}
 <entry>
 	<id>http://instaright.appspot.com/article/{{ entry.key }}</id>
-	<title>Link from {{ entry.domain }} submited by {{ entry.instaright_account }}</title>
+	<title>Link from domain: {{ entry.domain }} - submited by {{ entry.instaright_account }}</title>
 	<link href="http://instaright.appspot.com/article/{{ entry.key }}" />
 	<updated>{{ entry.date|date:"Y-m-d\TH:i:s\Z" }}</updated>
 	<summary>Link from {{ entry.domain }}. More about it can be found visiting link</summary>
