--- a/backend/templates/feed.html
+++ b/backend/templates/feed.html
@@ -15,7 +15,8 @@
 	<title>Link from domain: {{ entry.domain }} - submited by {{ entry.instaright_account }}</title>
 	<link href="http://instaright.appspot.com/article/{{ entry.key }}" />
 	<updated>{{ entry.date|date:"Y-m-d\TH:i:s\Z" }}</updated>
-	<summary>Link from {{ entry.domain }}. More about it can be found visiting link</summary>
+	<summary>{{ entry.domain }}</summary>
+	<domain>{{ entry.domain }}</domain>
 </entry>
 {% endfor %}
 </feed>
