channel api implemented

--- a/backend/templates/stats.html
+++ b/backend/templates/stats.html
@@ -9,7 +9,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <title>Instaright Dashboard</title>
-<link rel="stylesheet" href="/static/blog.css" type="text/css"/>
+<link rel="stylesheet" href="/css/stats.css" type="text/css"/>
 <link rel="alternate" href="#" type="application/atom+xml" title="Instaright Dashboard"/>
 <head>
 <script>
