fe updates and jquery

--- a/backend/static/blog.css
+++ b/backend/static/blog.css
@@ -216,3 +216,8 @@ a:hover {
 	width: 100%;
 	bottom: 0px;
 }
+
+#button { padding: .5em 1em; text-decoration: none; }
+#effect { width: 240px; height: 135px; padding: 0.4em; position: relative; }
+#effect h3 { margin: 0; padding: 0.4em; text-align: center; }
+
