--- a/backend/templates/feed.html
+++ b/backend/templates/feed.html
@@ -11,7 +11,7 @@
 </author>
 {% for entry in entries %}
 <entry>
-	<id>http://instaright.appspot.com/article/{{ entry.key }}</id>
+	<id>{{ entry.key }}</id>
 	<title>Instaright bookmark from domain: {{ entry.domain }} </title>
 	<link href="http://instaright.appspot.com/article/{{ entry.key }}" />
 	<updated>{{ entry.date|date:"Y-m-d\TH:i:s\Z" }}</updated>
